--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -18,8 +18,9 @@ body {
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
-    overflow-x: hidden;
     scroll-behavior: smooth;
+    overflow-x: hidden;
+    width: 100%;
 }
 
 /* -------- HEADINGS -------- */
@@ -34,24 +35,49 @@ h3 {
 h1 {
     margin-top: 10%;
     margin-bottom: 20px;
-    color: #555;
+    color: #992900;
     font-size: 240%;
     word-spacing: 4px;
     letter-spacing: 1px;
     text-align: center;
+    animation: text 3.5s 1;
 }
 
-h1:hover {
-    color: orangered;
-    font-size: 300%;
+@keyframes text {
+    0% {
+        color: #b93100;
+    }
+    30% {
+        color: #000000;
+        letter-spacing: 5px;
+        margin-bottom: 40px;
+    }
+    50% {
+        color: #b93100;
+    }
+    70% {
+        color: #b93100;
+    } 
 }
 
-h2 {
+.heading-title {
     font-size: 180%;
     word-spacing: 2px;
     text-align: center;
     margin-bottom: 60px;
     letter-spacing: 2px;
+    color: #b23000;
+    animation: texty 4s infinite;
+    animation-delay: 2s;
+}
+
+@keyframes texty {
+    0%{
+        
+    }
+    50%{
+        opacity:0;
+    }
 }
 
 /* -------- PARAGRAPHS -------- */
@@ -67,6 +93,7 @@ p {
 header {
     background: linear-gradient(90deg, rgba(255, 140, 0, 0.459) 4%, rgba(196, 209, 8, 0.616) 53%, rgba(255, 132, 0, 0.692) 100%), url(img/sunset1.jpg);
     background-size: cover;
+    overflow-y: hidden;
     background-repeat: no-repeat;
     background-position: center;
     height: 100vh;
@@ -95,7 +122,7 @@ header {
     display: inline-block;
     letter-spacing: 1px;
     text-decoration: none;
-    color: #555;
+    color: #333;
 }
 
 .navigation li a:link,
@@ -164,9 +191,11 @@ header {
 }
 
 .modal__heading {
-    color:dodgerblue;
+    color: orangered;
     margin-bottom: 1em;
 }
+
+
 
 .modal__paragraph {
     line-height: 1.5em;
@@ -202,8 +231,7 @@ a:visited {
 /* -------- SHOWCASE -------- */
 
 .showcase {
-    background: rgb(255,141,0);
-    background: radial-gradient(circle, rgba(255, 140, 0, 0.712) 4%, rgba(246, 255, 0, 0.719) 53%, rgba(255, 132, 0, 0.705) 100%)
+    background-color: #f3f3f3;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -231,7 +259,7 @@ a:visited {
 
 .item-desc {
     border: 1px solid #333;
-    padding: 5rem;
+    padding: 1rem;
     max-width: 38rem;
 }
 
@@ -243,17 +271,47 @@ a:visited {
     margin: 0 auto;
 }
 
-.item-desc p {
+.project-title {
     display: block;
     text-align: center;
     height: auto;
     padding-top: 1rem;
     margin: 0 auto;
+    text-decoration: underline;
+    color: #992900;
 }
+
+.project-desc {
+    display: block;
+    text-align: center;
+    height: auto;
+    padding-top: 1rem;
+    margin: 0 auto;
+    color: #333;
+}
+
+
+
+
 
 /* -------- FOOTER -------- */
 
-/* -------- ANIMATIONS -------- */
+.footer {
+    background-color: #333;
+    height: 100px;
+    width: 100%;
+    position: absolute;
+}
+
+.footerp {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #fff;
+}
+
+/* -------- VENDOR ANIMATIONS -------- */
 
 /* -------- typewriter h4 -------- */
 .typewriter h4 {
@@ -263,10 +321,10 @@ a:visited {
     display: flex;
     justify-content: center;
     font-size: 120%;
-    color: rgb(78, 78, 78);
+    color: #992900;
     letter-spacing: .15em; 
     animation: 
-      typing 1s steps(40, end),
+      typing 2s steps(40, end),
       blink-caret .75s step-end infinite;
   }
   
