--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -233,7 +233,7 @@ a:visited {
     color: rgb(206, 26, 26);
 }
 
-/* -------- SHOWCASE -------- */
+/* -------- PROJECTS -------- */
 
 
 .box img {
@@ -242,7 +242,7 @@ a:visited {
     margin-bottom: 15px;
 }
 
-.city-feature {
+.project-feature {
     margin-bottom: 5px;
 }
 
